# dragon8

./: LICENSE  README.md
doc/: index.html  style.css
src/: .gitignore  CMakeLists.txt  application.cpp  application.hpp  dist-inv-solver.cpp  dist-inv-solver.hpp  evaluator.cpp  evaluator.hpp  fortune.cpp  fortune.hpp  graphics.cpp  graphics.hpp  main.cpp  min-dist-solver.cpp  min-dist-solver.hpp  optimalization-type.hpp  point.hpp  points-state.hpp  projective.hpp  rectangle2d.hpp  rectangle2i.hpp  rescaling.cpp  rescaling.hpp  shape.cpp  shape.hpp  solver.cpp  solver.hpp  vec2.cpp  vec2.hpp  vec2d.cpp  vec2d.hpp  voronoi.cpp  voronoi.hpp
src/alias/: print.hpp  vec.hpp
src/test/: test.cpp  test.hpp
